# demanduler

./: .gitignore  Makefile  README.md
backend/: Cargo.toml
backend/src/: eventuler.rs  lib.rs  main.rs  rest.rs  websocket.rs
frontend/: .editorconfig  package-lock.json  package.json
frontend/src/: App.tsx
