[package]
name = "eventuler"
version = "0.1.0"
authors = ["Hyuksang Gwon"]
edition = "2018"

[dependencies]
async-tungstenite = { version = "0.7.1", features = ["async-std-runtime"] }
async-std = { version = "1.6.2", features = ["attributes"] }
futures = "0.3.5"
log = "0.4.8"
tide = "0.11.0"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }
daggy = "0.7"
thiserror = "1"
serde = "1.0"
serde_json = "1.0"
